# streamline

./: CMakeLists.txt  LICENSE.GCC-exception-3.1.md  streamline.pc.in
include/c++/scl/: array  cstddef  cstdint  cstdio  cstdlib  cstring  exception  functional  initializer_list  iosfwd  limits  memory  new  stdexcept  string  tuple  type_traits  utility  version
include/streamline/algorithm/: aligned_to.hpp  lookup_table_hash.hpp  minmax.hpp
include/streamline/containers/: array.fwd.hpp  array.hpp  array.inl  array.universal.inl  generic_container_template_args.def.hpp  initializer_list.hpp  initializer_list.inl  key_value_pair.fwd.hpp  key_value_pair.hpp  key_value_pair.inl  key_value_pair.universal.inl  lookup_table.fwd.hpp  lookup_table.hpp  lookup_table.inl  lookup_table.universal.inl  pair.hpp  tuple.fwd.hpp  tuple.hpp  tuple.inl  tuple.universal.inl  version.fwd.hpp  version.hpp
include/streamline/containers/impl/: array_data.hpp  hash_table.hpp  make_array.hpp  make_from_container.hpp  make_from_value.hpp  make_in_place.hpp  seed_or_index.hpp  tuple.hpp
include/streamline/diagnostics/: abort.hpp  result.hpp  terminate.hpp  unreachable.hpp
include/streamline/functional/: comparison.hpp  default_construct_functor.hpp  generic_stateless_functor.hpp  identity_function.hpp  invoke.hpp
include/streamline/functional/functor/: address_of.hpp  comparison.hpp  construct_using.hpp  default_construct.hpp  default_delete.hpp  forward_construct.hpp  generic_stateful.hpp  generic_stateless.hpp  identity.hpp  identity_index.hpp  invoke_each.hpp  invoke_each_result.hpp  subscript.hpp
include/streamline/memory/: align_value.hpp  delete.hpp  launder.hpp  new.hpp  new_handler.hpp  reference_ptr.fwd.hpp  reference_ptr.hpp  start_lifetime_as.hpp  unique_ptr.fwd.hpp  unique_ptr.hpp  unique_ptr.inl  unique_ptr.universal.inl
include/streamline/memory/impl/: deleter_wrapper.hpp  unique_ptr_base.hpp  unique_ptr_base.inl
include/streamline/metaprogramming/: common_type.hpp  conditional.hpp  constant.hpp  container_traits.fwd.hpp  container_traits.hpp  declval.hpp  empty_t.hpp  forward.hpp  in_place.hpp  integer_sequence.hpp  integral_constant.hpp  invoke_result.hpp  invoke_return_type.hpp  move.hpp  pack_indices_of_type.hpp  tuple_traits.fwd.hpp  tuple_traits.hpp  type_identity.hpp  type_modifiers.hpp  type_of_pack_element.hpp  underlying_type.hpp
include/streamline/metaprogramming/impl/: compounded_categories.hpp  isolated_categories.hpp  modifiers.hpp  relationships.hpp
include/streamline/metaprogramming/type_traits/: compounded_categories.hpp  extensions.hpp  isolated_categories.hpp  relationships.hpp  supported_operations.hpp
include/streamline/numeric/: int.hpp  numeric_traits.hpp
include/streamline/numeric/impl/: numeric_traits_base.hpp
include/streamline/universal/: get.hpp  make.hpp  make_deduced.hpp  swap.hpp
src/streamline/memory/: delete.cpp  new.cpp
